# synapse-gateway

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  Makefile.toml  README.md  biome.json  devenv.nix  openapi.yaml  package.json  rustfmt.toml  taplo.toml
.cargo/: config.toml
.changeset/: config.json  initial-release.md
.github/actions/cleanup-cargo-cache/: action.yml
.github/actions/install-rust/: action.yml
.github/workflows/: release.yml  sync.yml  test.yml
config/: synapse.prod.toml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: e2e.rs  embedded.rs  failover.rs  health.rs  llm.rs  middleware.rs  streaming.rs
crates/integration-tests/tests/harness/: config.rs  mock_llm.rs  mod.rs  server.rs
crates/stt/: Cargo.toml
crates/stt/src/: error.rs  http_client.rs  lib.rs  provider.rs  request.rs  server.rs  types.rs
crates/stt/src/provider/: deepgram.rs  whisper.rs
crates/synapse-auth/: Cargo.toml
crates/synapse-auth/src/: error.rs  lib.rs  resolver.rs  usage.rs  vault.rs  vault_events.rs
crates/synapse-billing/: Cargo.toml
crates/synapse-billing/src/: circuit.rs  client.rs  error.rs  lib.rs  recorder.rs  types.rs
crates/synapse-cache/: Cargo.toml
crates/synapse-cache/src/: lib.rs
crates/synapse-client/: Cargo.toml
crates/synapse-client/src/: agent_provider.rs  client.rs  embedded.rs  error.rs  lib.rs  types.rs
crates/synapse-config/: Cargo.toml
crates/synapse-config/src/: auth.rs  billing.rs  cache.rs  client_identification.rs  client_ip.rs  cors.rs  csrf.rs  embeddings.rs  env.rs  guardrails.rs  headers.rs  health.rs  imagegen.rs  lib.rs  llm.rs  loader.rs  mcp.rs  oauth.rs  proxy.rs  rate_limit.rs  server.rs  stt.rs  telemetry.rs  tls.rs  tts.rs
crates/synapse-config/src/telemetry/: exporters.rs  logs.rs  metrics.rs  tracing.rs
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: context.rs  error.rs  headers.rs  lib.rs
crates/synapse-embeddings/: Cargo.toml
crates/synapse-embeddings/src/: error.rs  lib.rs  provider.rs  server.rs  types.rs
crates/synapse-embeddings/src/provider/: openai.rs
crates/synapse-guardrails/: Cargo.toml
crates/synapse-guardrails/src/: lib.rs
crates/synapse-imagegen/: Cargo.toml
crates/synapse-imagegen/src/: error.rs  lib.rs  provider.rs  server.rs  types.rs
crates/synapse-imagegen/src/provider/: openai.rs
crates/synapse-llm/: Cargo.toml
crates/synapse-llm/src/: discovery.rs  error.rs  handler.rs  health.rs  lib.rs  router.rs  routing.rs  state.rs
crates/synapse-llm/src/convert/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/synapse-llm/src/protocol/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/synapse-llm/src/provider/: anthropic.rs  bedrock.rs  google.rs  mod.rs  openai.rs
crates/synapse-llm/src/types/: message.rs  mod.rs  request.rs  response.rs  stream.rs  tool.rs
crates/synapse-mcp/: Cargo.toml
crates/synapse-mcp/src/: access.rs  cache.rs  error.rs  index.rs  lib.rs  router.rs
crates/synapse-mcp/src/downstream/: client.rs  manager.rs
crates/synapse-ratelimit/: Cargo.toml
crates/synapse-ratelimit/src/: error.rs  lib.rs  request.rs  token.rs
crates/synapse-ratelimit/src/storage/: cache.rs  memory.rs  mod.rs  redis.rs
crates/synapse-routing/: Cargo.toml
crates/synapse-routing/src/: analysis.rs  error.rs  feedback.rs  lib.rs  registry.rs  scoring.rs
crates/synapse-routing/src/strategy/: cascade.rs  cost.rs  failover.rs  mod.rs  onnx.rs  score.rs  threshold.rs
crates/synapse-server/: Cargo.toml
crates/synapse-server/src/: auth.rs  billing_identity.rs  client_id.rs  cors.rs  csrf.rs  entitlement.rs  entitlement_cache.rs  guardrails.rs  health.rs  invalidate.rs  lib.rs  rate_limit.rs  request_context.rs  webhook.rs
crates/synapse-telemetry/: Cargo.toml
crates/synapse-telemetry/src/: lib.rs  metadata.rs  metrics.rs
crates/tts/: Cargo.toml
crates/tts/src/: error.rs  http_client.rs  lib.rs  provider.rs  request.rs  server.rs  types.rs
crates/tts/src/provider/: elevenlabs.rs  openai_tts.rs
misc/packaging/aur/omnidotdev-synapse-gateway/: PKGBUILD
misc/packaging/aur/omnidotdev-synapse-gateway-bin/: PKGBUILD
models/: README.md
scripts/: syncVersion.ts
synapse/: Cargo.toml
synapse/src/: args.rs  main.rs
