[workspace]
members = ["crates/*", "synapse"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://synapse.omni.dev"
keywords = ["synapse", "llm", "ai", "mcp", "stt", "tts"]
repository = "https://github.com/omnidotdev/synapse"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.83"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
aws-sdk-bedrock = { version = "1.72", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.72", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
axum = { version = "0.8.4", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22.1"
clap = "4.5.41"
clickhouse = { version = "0.13", features = ["lz4"] }
convert_case = "0.8.0"
ctor = "0.5.0"
dashmap = "6.1.0"
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }
duration-str = "0.17"
eventsource-stream = "0.2.3"
fast-glob = "1.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
governor = { version = "0.10", features = ["std", "jitter"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1"
indexmap = "2.7.0"
indoc = "2.0.6"
insta = "1.43.1"
itertools = "0.14.0"
jiff = "0.2.13"
jwt-compact = "0.8.0"
md5 = "0.8"
mini-moka = "0.10"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
    "logs",
    "metrics",
    "trace",
    "grpc-tonic",
    "http-proto",
    "tls",
    "tls-roots",
] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["logs", "metrics", "trace", "rt-tokio"] }
rand = "0.9"
redis = { version = "0.32.0", features = ["tokio-rustls-comp", "connection-manager"] }
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "charset",
    "http2",
    "macos-system-configuration",
] }
rmcp = "0.7.0"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
schemars = "1.0"
secrecy = "0.10.3"
serde = "1.0.219"
serde_json = "1.0"
serde_with = "3"
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
synapse-config = { path = "crates/synapse-config" }
synapse-core = { path = "crates/synapse-core" }
synapse-llm = { path = "crates/synapse-llm" }
synapse-mcp = { path = "crates/synapse-mcp" }
synapse-ratelimit = { path = "crates/synapse-ratelimit" }
synapse-server = { path = "crates/synapse-server" }
synapse-telemetry = { path = "crates/synapse-telemetry" }
stt = { version = "0.1.0", path = "crates/stt" }
tts = { version = "0.1.0", path = "crates/tts" }
tantivy = "0.25.0"
temp-env = "0.3"
tempfile = "3.14.0"
thiserror = "2.0.12"
tiktoken-rs = "0.7"
tokio = { version = "1.46.1", default-features = false }
tokio-util = "0.7"
toml = "0.9.2"
tonic = "0.14"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5.2"
tower-http = "0.6.6"
url = "2.5.4"
uuid = "1.17.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
