[package]
name = "synapse"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
default-run = "synapse"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive", "env"] }
synapse-config.workspace = true
synapse-server.workspace = true
synapse-telemetry.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
