[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
anyhow.workspace = true
axum.workspace = true
indexmap.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-config = { workspace = true }
synapse-server = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
