[package]
name = "synapse-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
http.workspace = true
mini-moka.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tracing.workspace = true
url.workspace = true

synapse-core.workspace = true

[lints]
workspace = true
