[package]
name = "synapse-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Typed Rust HTTP client for the Synapse AI router"

[features]
default = []
embedded = ["dep:synapse-llm", "dep:synapse-config", "dep:synapse-core"]

[dependencies]
anyhow.workspace = true
bytes = "1"
futures.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

# Embedded mode dependencies (optional)
synapse-llm = { workspace = true, optional = true }
synapse-config = { workspace = true, optional = true }
synapse-core = { workspace = true, optional = true }

[lints]
workspace = true
