[package]
name = "synapse-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
duration-str.workspace = true
http.workspace = true
indexmap = { workspace = true, features = ["serde"] }
opentelemetry-otlp.workspace = true
regex.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
insta.workspace = true
temp-env.workspace = true
toml.workspace = true
