[package]
name = "synapse-embeddings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
synapse-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
