[package]
name = "synapse-ratelimit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deadpool.workspace = true
duration-str.workspace = true
governor.workspace = true
mini-moka.workspace = true
redis.workspace = true
synapse-config.workspace = true
synapse-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[lints]
workspace = true
