[package]
name = "synapse-routing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
dashmap.workspace = true
ndarray = { version = "0.16", optional = true }
ort = { version = "2.0.0-rc.11", optional = true }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
synapse-config.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tracing.workspace = true

[lints]
workspace = true
