[package]
name = "synapse-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
http.workspace = true
jwt-compact.workspace = true
mini-moka.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
synapse-billing.workspace = true
synapse-config.workspace = true
synapse-core.workspace = true
synapse-embeddings.workspace = true
synapse-llm = { workspace = true, features = ["http", "billing"] }
synapse-mcp.workspace = true
synapse-ratelimit.workspace = true
synapse-telemetry.workspace = true
stt.workspace = true
tts.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "signal"] }
tokio-util.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true

[lints]
workspace = true
