[package]
name = "synapse-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
http.workspace = true
jwt-compact.workspace = true
mini-moka.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
synapse-auth.workspace = true
synapse-billing.workspace = true
synapse-cache.workspace = true
synapse-config.workspace = true
synapse-core.workspace = true
synapse-embeddings = { workspace = true, features = ["billing"] }
synapse-imagegen = { workspace = true, features = ["billing"] }
synapse-llm = { workspace = true, features = ["http", "billing", "cache"] }
synapse-mcp.workspace = true
synapse-guardrails.workspace = true
synapse-ratelimit.workspace = true
synapse-telemetry.workspace = true
stt = { workspace = true, features = ["billing"] }
tts = { workspace = true, features = ["billing"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "signal"] }
tokio-util.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing.workspace = true

[lints]
workspace = true
