[package]
name = "tts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-config.workspace = true
synapse-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
