[package]
name = "tts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[features]
billing = ["dep:synapse-billing", "dep:uuid", "dep:tokio"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-billing = { workspace = true, optional = true }
synapse-config.workspace = true
synapse-core.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"], optional = true }

[lints]
workspace = true
